// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tag/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-tag"
  >
    Tag 1
  </div>
  <div
    class="ant-tag"
  >
    <a
      href="https://github.com/ant-design/ant-design/issues/1862"
    >
      Link
    </a>
  </div>
  <div
    class="ant-tag"
  >
    Tag 2
    <i
      aria-label="icon: close"
      class="anticon anticon-close"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#close"
        />
      </svg>
    </i>
  </div>
  <div
    class="ant-tag"
  >
    Prevent Default
    <i
      aria-label="icon: close"
      class="anticon anticon-close"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#close"
        />
      </svg>
    </i>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/checkable.md correctly 1`] = `
<div>
  <div
    class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
  >
    Tag1
  </div>
  <div
    class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
  >
    Tag2
  </div>
  <div
    class="ant-tag ant-tag-checkable ant-tag-checkable-checked"
  >
    Tag3
  </div>
</div>
`;

exports[`renders ./components/tag/demo/colorful.md correctly 1`] = `
<div>
  <h4
    style="margin-bottom:16px"
  >
    Presets:
  </h4>
  <div>
    <div
      class="ant-tag ant-tag-magenta"
    >
      magenta
    </div>
    <div
      class="ant-tag ant-tag-red"
    >
      red
    </div>
    <div
      class="ant-tag ant-tag-volcano"
    >
      volcano
    </div>
    <div
      class="ant-tag ant-tag-orange"
    >
      orange
    </div>
    <div
      class="ant-tag ant-tag-gold"
    >
      gold
    </div>
    <div
      class="ant-tag ant-tag-lime"
    >
      lime
    </div>
    <div
      class="ant-tag ant-tag-green"
    >
      green
    </div>
    <div
      class="ant-tag ant-tag-cyan"
    >
      cyan
    </div>
    <div
      class="ant-tag ant-tag-blue"
    >
      blue
    </div>
    <div
      class="ant-tag ant-tag-geekblue"
    >
      geekblue
    </div>
    <div
      class="ant-tag ant-tag-purple"
    >
      purple
    </div>
  </div>
  <h4
    style="margin:16px 0"
  >
    Custom:
  </h4>
  <div>
    <div
      class="ant-tag ant-tag-has-color"
      style="background-color:#f50"
    >
      #f50
    </div>
    <div
      class="ant-tag ant-tag-has-color"
      style="background-color:#2db7f5"
    >
      #2db7f5
    </div>
    <div
      class="ant-tag ant-tag-has-color"
      style="background-color:#87d068"
    >
      #87d068
    </div>
    <div
      class="ant-tag ant-tag-has-color"
      style="background-color:#108ee9"
    >
      #108ee9
    </div>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/control.md correctly 1`] = `
<div>
  <div
    class="ant-tag"
  >
    Unremovable
  </div>
  <div
    class="ant-tag"
  >
    Tag 2
    <i
      aria-label="icon: close"
      class="anticon anticon-close"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#close"
        />
      </svg>
    </i>
  </div>
  <div
    class="ant-tag"
  >
    Tag 3
    <i
      aria-label="icon: close"
      class="anticon anticon-close"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#close"
        />
      </svg>
    </i>
  </div>
  <div
    class="ant-tag"
    style="background:#fff;border-style:dashed"
  >
    <i
      aria-label="icon: plus"
      class="anticon anticon-plus"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#plus"
        />
      </svg>
    </i>
     New Tag
  </div>
</div>
`;

exports[`renders ./components/tag/demo/controlled.md correctly 1`] = `
<div>
  <div
    class="ant-tag"
  >
    Movies
    <i
      aria-label="icon: close"
      class="anticon anticon-close"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#close"
        />
      </svg>
    </i>
  </div>
  <br />
  <button
    class="ant-btn ant-btn-sm"
    type="button"
  >
    <span>
      Toggle
    </span>
  </button>
</div>
`;

exports[`renders ./components/tag/demo/hot-tags.md correctly 1`] = `
<div>
  <h6
    style="margin-right:8px;display:inline"
  >
    Categories:
  </h6>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Movies
  </div>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Books
  </div>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Music
  </div>
  <div
    class="ant-tag ant-tag-checkable"
  >
    Sports
  </div>
</div>
`;
